# lay-sound-over-audiobook

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  make.sh
src/: cache.rs  chapters.rs  cli.rs  cover.rs  discovery.rs  ffmpeg.rs  images.rs  log.rs  main.rs  music_norm.rs  pipeline.rs  plan.rs  progress.rs  time.rs
